tests/neg-custom-args/captures/outer-var.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:11:8 -------------------------------------
11 |    x = q           // error
   |        ^
   |        Found:    (q : Proc)
   |        Required: () ->{p, q²} Unit
   |
   |        where:    q  is a parameter in method inner
   |                  q² is a parameter in method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:12:9 -------------------------------------
12 |    x = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    Proc
   |         Required: () ->{p, q} Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:13:9 -------------------------------------
13 |    y = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    Proc
   |         Required: () ->{p} Unit
   |
   |         Note that the universal capability `cap`
   |         cannot be included in capture set {p} of variable y
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:14:8 -------------------------------------
14 |    y = q           // error
   |        ^
   |        Found:    (q : Proc)
   |        Required: () ->{p} Unit
   |
   |        Note that reference (q : Proc), defined in method inner
   |        cannot be included in outer capture set {p} of variable y which is associated with method test
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/outer-var.scala:16:53 ---------------------------------------------------------
16 |  var finalizeActions = collection.mutable.ListBuffer[() => Unit]() // error
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                        Sealed type variable A cannot be instantiated to box () => Unit since
   |                        that type captures the root capability `cap`.
   |                        This is often caused by a local capability in an argument of method apply
   |                        leaking as part of its result.
